--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <p>
+      HTML5 вводит, так называемый, кэш приложения. Это означает, что приложение может быть сохранено в кэше и доступно при разорванном интернет-соединении.
+
+      Кэш приложения предоставляет следующие три преимущества:
+
+      Возможность автономной работы — пользователь может использовать приложение, когда соединение с сетью разорвано.
+      Скорость — кэшированные ресурсы загружаются быстрее.
+      Уменьшение нагрузки на сервер — браузер будет загружать с сервера только обновленные/измененные ресурсы.
+      Атрибут manifest должен содержаться на всех страницах, которые должны кэшироваться.
+
+      Файл манифеста — обычный текстовый файл, содержащий список всех ресурсов, которые браузер должен кэшировать для автономной работы приложения.
+
+      Чтобы подробнее узнать о том, как создать файл манифеста см. HTML5 кэш приложения.
+
+      Атрибут manifest был добавлен в HTML5 и недоступен в HTML 4.01.
+    </p>
   </body>
 </html>
